--- a/debian/control
+++ b/debian/control
@@ -15,16 +15,18 @@ Homepage: <insert the upstream URL, if relevant>
 #Description: <insert up to 60 chars description>
 # <insert long description, indented with spaces>
 
-Package: tinq-c
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
-
 Package: dds
 Section: libs
 Architecture: any
+#Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: DDS
  Bla-bla
+
+Package: tinq-c
+Section: libs
+Architecture: any
+Depends: dds (= ${binary:Version})
+#Build-Depends: dds (= ${binary:Version})
+Description: tinq
+ tinq long desc
 
