--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,7 @@
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 
+export qeo-c_MAJOR_VERSION := 0
 export qeo-c-util_MAJOR_VERSION := 0
 export qeo-c-core_MAJOR_VERSION := 0
 export qeo-management-client_MAJOR_VERSION := 0
@@ -16,31 +17,57 @@ export qeo-openssl-engine-pkcs12_MAJOR_VERSION := 0
 
 QEO-C_SRC:=qeo-c/qeo-c
 DDS_SRC:=dds
+
 TINQ-C_INSTALL:=debian/tinq-c
+TINQ-C-DEV_INSTALL:=debian/tinq-c-dev
 DDS_INSTALL:=debian/dds
+DDS-DEV_INSTALL:=debian/dds-dev
+
 MAKE_CMD:=make -f Makefile_component
-MAKE_CMD_INSTALL:=${MAKE_CMD} libdir=/usr/lib
+MAKE_CMD_INSTALL:=${MAKE_CMD} prefix=usr
 
 %:
 	dh $@ 
 
 override_dh_auto_build:
-	cd ${QEO-C_SRC} && ${MAKE_CMD}
+	cd ${QEO-C_SRC} && ${MAKE_CMD} all
 
 override_dh_auto_install:
 	#install qeo
-	cd ${QEO-C_SRC} && ${MAKE_CMD_INSTALL} recursive_install INSTALL_DIR=../../${TINQ-C_INSTALL}
-	#cleanup
-	rm ${TINQ-C_INSTALL}/usr/local/bin/ddsfreeshm 
-	rmdir ${TINQ-C_INSTALL}/usr/local/bin
-	rmdir ${TINQ-C_INSTALL}/usr/local
-	rm ${TINQ-C_INSTALL}/usr/lib/libdds.so.0
+	mkdir -p ${TINQ-C_INSTALL}/usr/lib
+	cp qeo-c/output/qeo-c/HOSTLINUX/libqeoc.so ${TINQ-C_INSTALL}/usr/lib/libqeoc.so.0
+	cp qeo-c/output/qeo-c-core/HOSTLINUX/libqeocore.so ${TINQ-C_INSTALL}/usr/lib/libqeocore.so.0
+	cp qeo-c/output/qeo-management-client/HOSTLINUX/libqeomgmtclient.so ${TINQ-C_INSTALL}/usr/lib/libqeomgmtclient.so.0
+	cp qeo-c/output/qeo-openssl-engine-pkcs12/HOSTLINUX/libqeo-openssl-engine-pkcs12.so ${TINQ-C_INSTALL}/usr/lib/libqeo-openssl-engine-pkcs12.so.0
+	cp qeo-c/output/qeo-c-util/HOSTLINUX/libqeoutil.so ${TINQ-C_INSTALL}/usr/lib/libqeoutil.so.0
 	#install dds
-	cd ${DDS_SRC} && ${MAKE_CMD_INSTALL} install INSTALL_DIR=../${DDS_INSTALL}
-	#cleanup
-	rm ${DDS_INSTALL}/usr/local/bin/ddsfreeshm 
-	rmdir ${DDS_INSTALL}/usr/local/bin
-	rmdir ${DDS_INSTALL}/usr/local
+	mkdir -p ${DDS_INSTALL}/usr/lib
+	cp qeo-c/output/dds/HOSTLINUX/libdds.so ${TINQ-C_INSTALL}/usr/lib/libdds.so.0
+	#install qeo-c-dev headers
+	mkdir -p ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	cp qeo-c/qeo-c-core/api/headers/qeo/types.h ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	cp qeo-c/qeo-c-core/api/headers/qeo/factory.h ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	cp qeo-c/qeo-c-core/api/headers/qeo/error.h ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	cp qeo-c/qeo-c/api/headers/qeo/api.h ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	cp qeo-c/qeo-c-util/api/headers/qeo/util_error.h ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	cp qeo-c/qeo-c-util/api/headers/qeo/device.h ${TINQ-C-DEV_INSTALL}/usr/include/qeo
+	#install qeo-c-dev libs
+	mkdir -p ${TINQ-C-DEV_INSTALL}/usr/lib
+	ln -s libqeoc.so.0 ${TINQ-C-DEV_INSTALL}/usr/lib/libqeoc.so
+	ln -s libqeocore.so.0 ${TINQ-C-DEV_INSTALL}/usr/lib/libqeocore.so
+	ln -s libqeomgmtclient.so.0 ${TINQ-C-DEV_INSTALL}/usr/lib/libqeomgmtclient.so
+	ln -s libqeo-openssl-engine-pkcs12.so.0 ${TINQ-C-DEV_INSTALL}/usr/lib/libqeo-openssl-engine-pkcs12.so
+	ln -s libqeoutil.so.0 ${TINQ-C-DEV_INSTALL}/usr/lib/libqeoutil.so
+	#install dds headers
+	mkdir -p ${DDS-DEV_INSTALL}/usr/include/dds
+	cp dds/api/headers/dds/dds_tsm.h ${DDS-DEV_INSTALL}/usr/include/dds
+	cp dds/api/headers/dds/dds_dcps.h ${DDS-DEV_INSTALL}/usr/include/dds
+	cp dds/api/headers/dds/dds_seq.h ${DDS-DEV_INSTALL}/usr/include/dds
+	cp dds/api/headers/dds/dds_types.h ${DDS-DEV_INSTALL}/usr/include/dds
+	cp dds/api/headers/dds/dds_error.h ${DDS-DEV_INSTALL}/usr/include/dds
+	#install dds-dev libs
+	mkdir -p ${DDS-DEV_INSTALL}/usr/lib
+	ln -s dds.so.0 ${DDS-DEV_INSTALL}/usr/lib/libdds.so
 
 #clean:
 #	echo "executing clean"
