--- a/debian/control
+++ b/debian/control
@@ -12,26 +12,34 @@ Package: dds
 Section: libs
 Architecture: any
 Description: Distributed Data Service
- The Data Distribution Service for Real-Time Systems (DDS) is an Object Management Group (OMG) machine to machine middleware "m2m" standard that aims to enable scalable, real-time, dependable, high performance and interoperable data exchanges between publishers and subscribers.
+ The Data Distribution Service for Real-Time Systems (DDS) is an Object
+ Management Group (OMG) machine to machine middleware "m2m" standard that
+ aims to enable scalable, real-time, dependable, high performance and
+ interoperable data exchanges between publishers and subscribers.
 
 Package: dds-dev
 Section: libdevel
 Architecture: any
 Depends: dds (= ${binary:Version})
 Description: Distributed Data Service
- The Data Distribution Service for Real-Time Systems (DDS) is an Object Management Group (OMG) machine to machine middleware "m2m" standard that aims to enable scalable, real-time, dependable, high performance and interoperable data exchanges between publishers and subscribers
+ The Data Distribution Service for Real-Time Systems (DDS) is an Object
+ Management Group (OMG) machine to machine middleware "m2m" standard that
+ aims to enable scalable, real-time, dependable, high performance and
+ interoperable data exchanges between publishers and subscribers.
 
 Package: tinq-c
 Section: libs
 Architecture: any
-Depends: dds (= ${binary:Version}), openssl, curl
+Depends: dds (= ${binary:Version}), openssl, curl, libc
 Description: publish-subscribe software framework
- Tinq is a software framework that allows devices to easily exchange data with other devices on the same network based on a publish-subscribe paradigm
+ Tinq is a software framework that allows devices to easily exchange data
+ with other devices on the same network based on a publish-subscribe paradigm
 
 Package: tinq-c-dev
 Section: libdevel
 Architecture: any
 Depends: tinq-c (= ${binary:Version})
 Description: publish-subscribe software framework
- Tinq is a software framework that allows devices to easily exchange data with other devices on the same network based on a publish-subscribe paradigm
+ Tinq is a software framework that allows devices to easily exchange data
+ with other devices on the same network based on a publish-subscribe paradigm
 
